[project]
name = "tvla-realenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipdb>=0.13.13",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "openai>=2.15.0",
    "opencv-python>=4.11.0.86",
    "pyrealsense2>=2.56.5.9235",
    "pytransform3d>=3.14.4",
    "robotic-arm>=1.1.4",
]

[project.scripts]
tvla-realenv = "tvla_realenv:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
